royalty free photos added all links and phots active

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
 
 
   <div class="container">
-    <img src="./images/Easter_1101527403.jpg" alt="Food" style="width: 100%;">
+     <img src="./images/Easter_1101527403.jpg" alt="Food" style="width: 100%;">
     <div class="bottom-left"><strong><em><h1>Jason's Recipes</h1></em></strong></div></div>
-    
-    <p><a href="recipes/lasagna.html">Lasagna</a>  </p>
-    <p></p><a href="recipes/firechicken.html">fire Cracker Chicken</a></p>
-    <p></p><a href="recipes/mongobeef.html">Mongolian Beef</a></p>
+   <ul>
+    <p><img src="./images/ai.art_food_1009894.jpg" width="140">
+      <a href="recipes/lasagna.html">Lasagna</a></p>
+   
+      
+    <p> <img src="./images/firecrackerchicken.jpg" width="100">
+    <a href="recipes/firechicken.html">Fire Cracker Chicken</a></p>
+   
+
+    <p><img src="./images/Mongolian-Beef23-1-1024x1536.jpg" width="100">
+      <a href="recipes/mongobeef.html">Mongolian Beef</a></p>
+   </ul>
 </body>
 </html>
