--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,39 @@
     <h1>Lasagna</h1>
   </head>
 <body>
-    <img src="../images/Lasagna.jpg" alt="Best Lasagna" width="600
+    <img src="../images/ai.art_food_1009892.jpg" alt="Best Lasagna" width="600
 ">
+<p>Homemade lasagna may have a few steps, but each step is easy and I assure you that it is
+     worth the time; the perfect Italian meal!
+
+    The best lasagna recipe is made with ingredients that you know. All you will need for this easy lasagna recipe is one pan, one bowl, and a 9×13 baking dish!</p>
+    <h3>Ingredients</h3>
+        <Ul><li>12 lasagna noodles uncooked</li>
+                <li>4 cups mozzarella cheese shredded and divided</li>
+                    <li>½ cup parmesan cheese shredded and divided</li>
+
+            <h4>Tomato Sauce</h4>
+                <li>½ pound lean ground beef</li>
+                    <li>½ pound Italian sausage</li>
+                        <li>1 onion diced</li>
+                            <li>2 cloves garlic minced</li>
+                                <li>36 ounces pasta sauce *see note</li>
+                                    <li>2 tablespoons tomato paste</li>
+                                        <li>1 teaspoon Italian seasoning</li>
+            
+            <h4>Cheese Mixture</h4>
+                <li>2 cups ricotta cheese</li>
+                    <li>¼ cup fresh parsley chopped</li>
+                        <li>1 egg beaten</li></ul>
+
+            <h3>Instructions</h3>
+                <ol><li>Preheat the oven to 350°F. In a large pot of salted water, boil lasagna noodles until al dente according to package directions. Drain, rinse under cold water, and set aside.</li>
+                    <li>In a large skillet or dutch oven, brown beef, sausage, onion, and garlic over medium-high heat until no pink remains. Drain any fat.</li>
+                        <li> Stir in the pasta sauce, tomato paste, Italian seasoning, ½ teaspoon of salt, and ¼ teaspoon of black pepper. Simmer uncovered over medium heat for 5 minutes or until thickened.</li>
+                            <li>In a separate bowl, combine 1 ½ cups mozzarella, ¼ cup parmesan cheese, ricotta, parsley, egg, and ¼ teaspoon salt.</li>
+                                <li> Spread 1 cup of the meat sauce in a 9×13 pan or casserole dish. Top it with 3 lasagna noodles. Layer with ⅓ of the ricotta cheese mixture and 1 cup of meat sauce. Repeat twice more. Finish with 3 noodles topped with remaining sauce.</li>
+                                    <li>Cover with foil and bake for 45 minutes. </li>
+                                        <li> Remove the foil and sprinkle with the remaining 2 ½ cups mozzarella cheese and ¼ cup parmesan cheese. Bake for an additional 15 minutes or until browned and bubbly. Broil for 2-3 minutes if desired.</li>
+                                            <li>Rest for at least 15 minutes before cutting.</li> </ol>
 </body>
 </html>
