Code cleaned up so readers are able to cleary read

--- a/recipes/mongobeef.html
+++ b/recipes/mongobeef.html
@@ -2,34 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mongolian Beef  </title>
-    <h1>Mongolian Beef</h1>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Mongolian Beef  </title>
+                <h1>Mongolian Beef</h1>
   </head>
 <body>
     <img src="../images/Mongolian-Beef23-1-1024x1536.jpg" alt="Mongolian Beef" width="300
 ">
 <p>This easy Mongolian Beef recipe is inspired by my favorite takeout dish. Tender beef and fresh green onions in an amazing garlic and ginger sauce, served over hot cooked rice, and ready in 30 minutes.</p>
     <h3>Ingredients</h3>
-    <ul>
-        <li>1 pound flank steak , sliced very thinly, across the grain</li>
-            <li>1/3 cup cornstarch</li>
-                <li>2-4 Tablespoons oil (vegetable or canola oil)</li>
-                    <li>1/2 cup low-sodium soy sauce</li>
-                        <li>1/4 cup water</li>
-                            <li>1/2 cup light brown sugar , packed</li>
-                                <li>2 tsp cornstarch + 2 tsp water mixed together to make a “slurry”</li>
-                                    <li>1 teaspoon freshly grated ginger</li>
-                                        <li>4 cloves garlic , minced</li>
-                                            <li>▢1 bunch green onion , chopped</li>
-                                                <li>2 or 3 cups hot cooked rice for serving</li></ul>
+        <ul>
+            <li>1 pound flank steak , sliced very thinly, across the grain</li>
+                <li>1/3 cup cornstarch</li>
+                    <li>2-4 Tablespoons oil (vegetable or canola oil)</li>
+                        <li>1/2 cup low-sodium soy sauce</li>
+                            <li>1/4 cup water</li>
+                                <li>1/2 cup light brown sugar , packed</li>
+                                    <li>2 tsp cornstarch + 2 tsp water mixed together to make a “slurry”</li>
+                                        <li>1 teaspoon freshly grated ginger</li>
+                                            <li>4 cloves garlic , minced</li>
+                                                <li>▢1 bunch green onion , chopped</li>
+                                                    <li>2 or 3 cups hot cooked rice for serving</li></ul>
         <a><img src="../images/Mongolian-Beef23-3-scaled.jpg" alt="Mongolian Beef Strips" width="150"</a>    
-
-    <h3>Instructions</h3>
-    <ol><li>Prep steak: Slice the flank steak into 1/4” thin (or thinner) slices, across the grain of the meat. Lay the slices across a large baking sheet or your cutting board, and toss them on all sides with the ⅓ cup cornstarch.</li>
-        <li>Cook steak: Heat a large pan or wok over medium-high heat. Once hot add 1 or 2 tablespoons oil. Cook the beef in small batches for about 30-seconds on each side, just until browned on both sides, flipping only once. Remove the beef to a plate and repeat with another batch, as needed.</li>
-        <li>Make sauce: In a small bowl whisk together the soy sauce, water, brown sugar, and cornstarch slurry. In the same large pan you used to cook the beef, turn the heat to medium, add the ginger and garlic and sauté for 20 seconds. Add sauce mixture and bring to a simmer. Cook, stirring, until slightly thickened, about 2 minutes.</li> 
-        <li>Return beef to the pan with the sauce and toss to combine. Cook for 1-2 more minutes until warmed through. Add green onions.</li>
-        <li>Serve immediately, with a side of hot cooked rice.</li></ol>
-                                            </body>
+<h3>Instructions</h3>
+    <ol>
+        <li>Prep steak: Slice the flank steak into 1/4” thin (or thinner) slices, across the grain of the meat. Lay the slices across a large baking sheet or your cutting board, and toss them on all sides with the ⅓ cup cornstarch.</li>
+            <li>Cook steak: Heat a large pan or wok over medium-high heat. Once hot add 1 or 2 tablespoons oil. Cook the beef in small batches for about 30-seconds on each side, just until browned on both sides, flipping only once. Remove the beef to a plate and repeat with another batch, as needed.</li>
+                <li>Make sauce: In a small bowl whisk together the soy sauce, water, brown sugar, and cornstarch slurry. In the same large pan you used to cook the beef, turn the heat to medium, add the ginger and garlic and sauté for 20 seconds. Add sauce mixture and bring to a simmer. Cook, stirring, until slightly thickened, about 2 minutes.</li> 
+                    <li>Return beef to the pan with the sauce and toss to combine. Cook for 1-2 more minutes until warmed through. Add green onions.</li>
+                        <li>Serve immediately, with a side of hot cooked rice.</li></ol>
+</body>
 </html>
