--- a/index.html
+++ b/index.html
@@ -2,41 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
       /* Container holding the image and the text */
       .container {
             position: relative;
             text-align: center;
-            color: white;
-        }
+            color: white;}
 
         /* Bottom left text */
         .bottom-left {
             position: absolute;
             bottom: 100px;
-            left: 16px;
-        }
+            left: 16px;}
         </style>
-       
-</head>
-<body>
-  
-
-
+       </head>
+      <body>
   <div class="container">
-     <img src="./images/Easter_1101527403.jpg" alt="Food" style="width: 100%;">
-    <div class="bottom-left"><strong><em><h1>Jason's Recipes</h1></em></strong></div></div>
+    <img src="./images/Easter_1101527403.jpg" alt="Food" style="width: 100%;">
+      <div class="bottom-left"><strong><em><h1>Jason's Recipes</h1></em></strong></div></div>
    <ul>
     <p><img src="./images/ai.art_food_1009894.jpg" width="140">
       <a href="recipes/lasagna.html">Lasagna</a></p>
-   
-      
-    <p> <img src="./images/firecrackerchicken.jpg" width="100">
-    <a href="recipes/firechicken.html">Fire Cracker Chicken</a></p>
-   
-
-    <p><img src="./images/Mongolian-Beef23-1-1024x1536.jpg" width="100">
+        <a><img src="./images/firecrackerchicken.jpg" width="100"></a>
+          <a href="recipes/firechicken.html">Fire Cracker Chicken</a></p>
+   <a><img src="./images/Mongolian-Beef23-1-1024x1536.jpg" width="100"></a>
       <a href="recipes/mongobeef.html">Mongolian Beef</a></p>
    </ul>
 </body>
